UX fixes with colors and spacing

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -674,6 +674,32 @@ div.ui.celled.grid.search-grid {
   margin-top: 0px;
 }
 
+div.content.active.graph-accordian {
+  padding-bottom: 40px !important;
+}
+
+h1.ui.center.aligned.header {
+  color: rgb(70,70,70);
+}
+
+.sort.large.bordered.inverted.icon {
+  background-color: rgb(90,90,90) !important;
+}
+
+.ui.green.mini.label.sentiment-value {
+  color: rgb(0,0,0) !important;
+  background-color:  rgb(149, 223, 168) !important;
+}
+
+.ui.red.mini.label.sentiment-value {
+  color: rgb(0,0,0) !important;
+  background-color:  rgb(231, 134, 101) !important;
+}
+
+div.item.matches-list-item {
+  padding-bottom: 12px !important;
+}
+
 div.ui.icon.input.searchinput {
   width: 500px;
 }
